# postgres_da_ai_tool_with_autogen_v4

./: .aider.chat.history.md  .aider.input.history  .env  pyproject.toml
postgres_da_ai_agent/: main.py
postgres_da_ai_agent/agents/: agent_config.py  agents.py
postgres_da_ai_agent/modules/: db.py  embeddings.py  file.py  llm.py  orchestrator.py
